fix overview info grid gap

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -103,7 +103,7 @@ h2 {
 .detail_info {
   padding: 0 5%;
   display: grid;
-  grid-gap: 25px;
+  grid-gap: 5%;
   grid-template-columns: repeat(4, 1fr);
 }
 
@@ -256,7 +256,7 @@ h2 {
   }
   .detail_info {
     font-size: .5rem;
-    grid-gap: 10px;
+    grid-gap: 2%;
     padding: 0;
   }
   h2 {
